--- a/Yazilimpark/Yazilimpark.csproj
+++ b/Yazilimpark/Yazilimpark.csproj
@@ -7,15 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DocumentFormat.OpenXml" Version="2.16.0" />
-    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.9" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="RestSharp" Version="108.0.1" />
+    <Compile Remove="Views\WeatherForecast\**" />
+    <Content Remove="Views\WeatherForecast\**" />
+    <EmbeddedResource Remove="Views\WeatherForecast\**" />
+    <None Remove="Views\WeatherForecast\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\WeatherForecast\" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.16.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="RestSharp" Version="108.0.1" />
   </ItemGroup>
 
 </Project>
